# dashboard-ventas-asesores

./: .gitignore  LICENSE
app/: .claspignore  appsscript.json  jsconfig.json  package-lock.json
app/scripts/: charts.html  table.html
app/src/: config.js  drive.js  webapp.js
app/styles/: cabecera.html  dashboard.html  tabla.html
app/views/: index.html
docs/prompt/: 1-idea-inicial.md  2-modificaciones.md  3-drive.md
pipeline/: main.py  pyproject.toml
pipeline/data/: ventas_agrupadas.sql  ventas_desglosadas.sql
pipeline/src/: bigquery_client.py  config.py  drive_client.py  token_manager.py  ui.py
