[project]
name = "pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "db-dtypes>=1.7.1",
    "google-api-python-client>=2.198.0",
    "google-cloud-bigquery>=3.42.2",
    "google-cloud-bigquery-storage>=2.39.0",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "typer>=0.26.8",
]
